--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Contact form</title>
      <style>
-          *{
+                    *{
                margin: 0;
                padding: 0;
                box-sizing: border-box;
@@ -36,17 +36,17 @@
                color: #fff;
                font-family: roboto;
           }
-          .label-text{
-               font-size: 18px;
-               align-self: flex-start;
-               margin: 5px 0 5px 10%;
-               
-          }
           .form-title {
                font-size: 26px;
                text-align: center;
-               margin: 10px 0;
+               margin: 15px 0;
           }
+          .label-text{
+               font-size: 17px;
+               align-self: flex-start;
+               margin: 5px 0 5px 5px;
+          }
+          
           .form-con{
                height: 100vh;
                width: 100vw;
@@ -62,16 +62,16 @@
           }
           .contact-input{
                height: 40px;
-               width: 80%;
+               width: 100%;
                margin: 5px 0;
           }
           textarea{
-               width: 80%;
+               width: 100%;
           }
           .btn-submit{
-               width: 30%;
+               width: 35%;
                height: 50px;
-               margin: 10px 0;
+               margin: 30px 0 10px;
                border-radius: 5px;
                border: none;
                font-size: 18px;
@@ -83,7 +83,11 @@
           input:focus, textarea:focus{
                outline: none;
           }
-          @media only screen and (min-width: 768px) {
+          .area-text{
+               padding: 2px  5px;
+               font-size: 12px;
+          }
+     @media only screen and (min-width: 768px) {
            .contact-form{
                 width: 70%;
            }
@@ -92,24 +96,59 @@
                margin: 5px 0;
           }
            .label-text{
-               font-size: 26px;
-               margin: 5px 0 3px 10%;
+               font-size: 22px;
+               margin: 5px 0 3px 5px;
           }
           .contact-input{
-               height: 70px;
-               width: 80%;
+               height: 60px;
+               width: 100%;
                margin: 14px 0;
           }
           input[placeholder]{
-               font-size: 22px;
+               font-size: 20px;
+          }
+          textarea{
+               width: 100%;
           }
            .btn-submit{
                width: 30%;
                height: 55px;
-               margin: 20px 0;
+               margin: 40px 0 10px;
                border-radius: 5px;
                border: none;
                font-size: 28px;
+          }
+     }
+
+
+
+     @media only screen and (min-width: 968px) {
+           .contact-form{
+                width: 30%;
+           }
+            .form-title {
+               font-size: 30px;
+               margin: 5px 0;
+          }
+           .label-text{
+               font-size: 15px;
+               margin: 3px 0;
+               font-weight: 500;
+          }
+          .contact-input{
+               height: 35px;
+               margin: 8px 0;
+          }
+          input[placeholder]{
+               font-size: 14px;
+               color: #111;
+          }
+           .btn-submit{
+               width: 30%;
+               height: 40px;
+               margin: 30px 0 10px;
+               border: none;
+               font-size: 16px;
           }
      }
      </style>
